# docs/swagger.json
@@ -4,11 +4,37 @@
         "description": "API Server for TimeTracker Application",
         "title": "Time Tracker API",
         "contact": {},
-        "version": "1.0"
+        "version": "1.01"
     },
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Check if the service is available",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Service"
+                ],
+                "summary": "Health Check",
+                "responses": {
+                    "200": {
+                        "description": "{\"status\": \"service is available\"}",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/tasks": {
             "get": {
                 "description": "Get tasks for a user within a specified period. EXAMPLE: 2024-07-15T13:35:35.481207+03:00",
